testing/errors/toolateforpostfix2.a
	*=$1000
label
	b = label	; read symbol
label+2	; -> too late for postfix
